<?xml version="1.0"?>
<package format="2">
  <name>graph_search_contact_planner</name>
  <version>0.0.0</version>
  <description>The graph_search_contact_planner package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>graph_search</depend>

</package>
